--- a/essential/bundler/package.json
+++ b/essential/bundler/package.json
@@ -14,6 +14,11 @@
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "sass": "^1.33.0"
-  }
+  },
+  "staticFiles": {
+    "staticPath": "static"
+}
+
 }
