--- a/essential/bundler/package.json
+++ b/essential/bundler/package.json
@@ -14,11 +14,16 @@
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "parcel-plugin-static-files-copy": "^2.6.0",
+    "postcss": "^8.3.0",
     "sass": "^1.33.0"
   },
   "staticFiles": {
     "staticPath": "static"
-}
-
+  },
+  "browserslist": [
+    ">1%",
+    "last 2 versions"
+  ]
 }
