--- a/essential/bundler/package.json
+++ b/essential/bundler/package.json
@@ -14,6 +14,9 @@
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "autoprefixer": "^9.8.6",
     "parcel-plugin-static-files-copy": "^2.6.0",
     "postcss": "^8.3.0",
