--- a/scss/overwatch-scss/package.json
+++ b/scss/overwatch-scss/package.json
@@ -2,6 +2,7 @@
   "name": "overwatch-scss",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://hoseong511.github.io/frontEnd/scss/overwatch-scss/dist",
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html",
